--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "",
   "dependencies": {
+    "@babel/polyfill": "^7.4.0",
     "concurrently": "^4.1.0",
     "cool-ascii-faces": "^1.3.4",
     "json-server": "^0.9.6",
