--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "",
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
+    "@restart/context": "^2.1.4",
     "concurrently": "^4.1.0",
     "cool-ascii-faces": "^1.3.4",
     "json-server": "^0.9.6",
