--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^1.0.0-beta.6",
     "react-dom": "^16.8.6",
     "react-jss": "^8.6.1",
+    "react-reveal": "^1.2.2",
     "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
