--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "license": "",
   "dependencies": {
     "@babel/polyfill": "^7.4.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.17",
+    "@fortawesome/free-solid-svg-icons": "^5.8.1",
+    "@fortawesome/react-fontawesome": "^0.1.4",
     "@restart/context": "^2.1.4",
     "concurrently": "^4.1.0",
     "cool-ascii-faces": "^1.3.4",
